--- a/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-05 12:13+0000\n"
-"PO-Revision-Date: 2018-04-19 16:15+0000\n"
+"PO-Revision-Date: 2018-06-05 13:04+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: German (informal) <https://translate.pretix.eu/projects/"
-"pretix/pretix-js/de_Informal/>\n"
+"Language-Team: German (informal) <https://translate.pretix.eu/projects/pretix"
+"/pretix-js/de_Informal/>\n"
 "Language: de_Informal\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -127,11 +127,11 @@ msgstr "Drücke Strg+C zum kopieren!"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:22
 msgid "Lead Scan QR"
-msgstr ""
+msgstr "Lead-Scanning-QR-Code"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:24
 msgid "Check-in QR"
-msgstr ""
+msgstr "Check-in-QR-Code"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:216
 msgid "The PDF background file could not be loaded for the following reason:"
@@ -193,7 +193,7 @@ msgstr "Keine"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:527
 msgid "Use a different name internally"
-msgstr ""
+msgstr "Intern einen anderen Namen verwenden"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
