--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-06 14:14+0000\n"
-"PO-Revision-Date: 2018-06-05 13:03+0000\n"
+"PO-Revision-Date: 2018-06-06 14:47+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: German (informal) <https://translate.pretix.eu/projects/"
-"pretix/pretix/de_Informal/>\n"
+"Language-Team: German (informal) "
+"<https://translate.pretix.eu/projects/pretix/pretix/de_Informal/>\n"
 "Language: de_Informal\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11480,10 +11480,8 @@ msgid "Badge layout"
 msgstr "Badge-Layout"
 
 #: pretix/plugins/badges/forms.py:22 pretix/plugins/ticketoutputpdf/forms.py:24
-#, fuzzy
-#| msgid "Event date"
 msgid "(Event default)"
-msgstr "Veranstaltungsdatum"
+msgstr "(Veranstaltungs-Standardlayout)"
 
 #: pretix/plugins/badges/signals.py:108
 msgid "Badge layout created."
@@ -13196,18 +13194,14 @@ msgid "All paid PDF tickets in one file"
 msgstr "Alle bezahlten Tickets als eine PDF-Datei"
 
 #: pretix/plugins/ticketoutputpdf/forms.py:23
-#, fuzzy
-#| msgid "PDF ticket output"
 msgid "PDF ticket layout"
-msgstr "PDF-Ticketausgabe"
+msgstr "PDF-Ticketlayout"
 
 #: pretix/plugins/ticketoutputpdf/migrations/0002_auto_20180605_2022.py:22
 #: pretix/plugins/ticketoutputpdf/migrations/0002_auto_20180605_2022.py:38
 #: pretix/plugins/ticketoutputpdf/views.py:185
-#, fuzzy
-#| msgid "Default ticket layout"
 msgid "Default layout"
-msgstr "Standard-Ticketlayout"
+msgstr "Standard-Layout"
 
 #: pretix/plugins/ticketoutputpdf/signals.py:50
 #, python-brace-format
@@ -13220,53 +13214,39 @@ msgid "<Answer: {question}>"
 msgstr "<Antwort: {question}>"
 
 #: pretix/plugins/ticketoutputpdf/signals.py:116
-#, fuzzy
-#| msgid "Badge layout created."
 msgid "Ticket layout created."
-msgstr "Das Badge-Layout wurde erstellt."
+msgstr "Das Ticket-Layout wurde erstellt."
 
 #: pretix/plugins/ticketoutputpdf/signals.py:117
-#, fuzzy
-#| msgid "Badge layout deleted."
 msgid "Ticket layout deleted."
-msgstr "Das Badge-Layout wurde gelöscht."
+msgstr "Das Ticket-Layout wurde gelöscht."
 
 #: pretix/plugins/ticketoutputpdf/signals.py:118
-#, fuzzy
-#| msgid "Badge layout changed."
 msgid "Ticket layout changed."
-msgstr "Das Badge-Layout wurde geändert."
+msgstr "Das Ticket-Layout wurde geändert."
 
 #: pretix/plugins/ticketoutputpdf/signals.py:131
-#, fuzzy, python-brace-format
-#| msgid "Badge layout {val}"
+#, python-brace-format
 msgid "Ticket layout {val}"
-msgstr "Badge-Layout {val}"
+msgstr "Ticket-Layout {val}"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/delete.html:4
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/delete.html:6
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/edit.html:8
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/edit.html:15
-#, fuzzy
-#| msgid "Default ticket layout"
 msgid "Ticket layout"
-msgstr "Standard-Ticketlayout"
+msgstr "Ticket-Layout"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/delete.html:9
-#, fuzzy, python-format
-#| msgid ""
-#| "Are you sure you want to delete the badge layout <strong>%(layout)s</"
-#| "strong>?"
+#, python-format
 msgid "Are you sure you want to delete the layout <strong>%(layout)s</strong>?"
-msgstr ""
-"Möchtest du das Badge-Layout <strong>%(layout)s</strong> wirklich löschen?"
+msgstr "Möchtest du das Layout <strong>%(layout)s</strong> wirklich löschen?"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/edit.html:6
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/edit.html:13
-#, fuzzy, python-format
-#| msgid "Badge layout: %(name)s"
+#, python-format
 msgid "Ticket layout: %(name)s"
-msgstr "Badge-Layout: %(name)s"
+msgstr "Ticket-Layout: %(name)s"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/edit.html:23
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/form.html:4
@@ -13289,31 +13269,25 @@ msgstr ""
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/form.html:18
 msgid "Change default layout in a new tab"
-msgstr ""
+msgstr "Standard-Layout in neuem Tab bearbeiten"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/form.html:22
 msgid "Advanced mode (multiple layouts)"
-msgstr ""
+msgstr "Erweiterter Modus (mehrere Layouts)"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:4
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:6
-#, fuzzy
-#| msgid "Default ticket layout"
 msgid "Ticket layouts"
-msgstr "Standard-Ticketlayout"
+msgstr "Ticket-Layouts"
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:10
-#, fuzzy
-#| msgid "You haven't created any badge layouts yet."
 msgid "You haven't created any layouts yet."
-msgstr "Du hast noch keine Badge-Layouts erstellt."
+msgstr "Du hast noch keine Layouts erstellt."
 
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:17
 #: pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html:24
-#, fuzzy
-#| msgid "Create a new account"
 msgid "Create a new layout"
-msgstr "Neuen Benutzer erstellen"
+msgstr "Neues Layout erstellen"
 
 #: pretix/plugins/ticketoutputpdf/ticketoutput.py:29
 msgid "PDF output"
@@ -13324,30 +13298,22 @@ msgid "Default ticket layout"
 msgstr "Standard-Ticketlayout"
 
 #: pretix/plugins/ticketoutputpdf/views.py:98
-#, fuzzy
-#| msgid "The new badge layout has been created."
 msgid "The new ticket layout has been created."
-msgstr "Das neue Badge-Layout wurde erstellt."
+msgstr "Das neue Layout wurde erstellt."
 
 #: pretix/plugins/ticketoutputpdf/views.py:126
 #: pretix/plugins/ticketoutputpdf/views.py:156
 #: pretix/plugins/ticketoutputpdf/views.py:204
-#, fuzzy
-#| msgid "The requested badge layout does not exist."
 msgid "The requested layout does not exist."
-msgstr "Das ausgewählte Badge-Layout existiert nicht."
+msgstr "Das ausgewählte Layout existiert nicht."
 
 #: pretix/plugins/ticketoutputpdf/views.py:168
-#, fuzzy
-#| msgid "The selected badge layout been deleted."
 msgid "The selected ticket layout been deleted."
-msgstr "Das ausgewählte Badge-Layout wurde gelöscht."
+msgstr "Das ausgewählte Layout wurde gelöscht."
 
 #: pretix/plugins/ticketoutputpdf/views.py:208
-#, fuzzy
-#| msgid "Badge layout: {}"
 msgid "Ticket PDF layout: {}"
-msgstr "Badge-Layout: {}"
+msgstr "Ticket-Layout: {}"
 
 #: pretix/presale/checkoutflow.py:50
 msgctxt "checkoutflow"
