--- a/src/pretix/locale/es/LC_MESSAGES/django.po
+++ b/src/pretix/locale/es/LC_MESSAGES/django.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-06 14:14+0000\n"
-"PO-Revision-Date: 2018-05-31 02:00+0000\n"
-"Last-Translator: Lorenzo Peña <lorinkoz@nauta.cu>\n"
-"Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/pretix/"
-"es/>\n"
+"PO-Revision-Date: 2018-06-20 04:00+0000\n"
+"Last-Translator: Dimas 3r1ck Rivas <rivas7676@gmail.com>\n"
+"Language-Team: Spanish "
+"<https://translate.pretix.eu/projects/pretix/pretix/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: pretix/api/models.py:18
 msgid "Application name"
-msgstr ""
+msgstr "Nombre de Aplicacion"
 
 #: pretix/api/models.py:21
 msgid "Redirection URIs"
@@ -33,7 +33,7 @@ msgstr ""
 
 #: pretix/api/models.py:25 pretix/plugins/paypal/payment.py:58
 msgid "Client ID"
-msgstr ""
+msgstr "ID Cliente"
 
 #: pretix/api/models.py:29
 msgid "Client secret"
@@ -90,7 +90,7 @@ msgstr ""
 msgid ""
 "The application \"{application_name}\" has been authorized to access your "
 "account."
-msgstr ""
+msgstr "la aplicacion  ha sido autorizada para acceder desde tu cuenta"
 
 #: pretix/base/exporters/answers.py:18
 msgid "Answers to file upload questions"
