--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -12124,7 +12124,7 @@ msgstr "Diese Bestellung wurde manuell bezahlt."
 msgid ""
 "This order has been planned to be paid manually, but is not marked as paid."
 msgstr ""
-"Diese Bezahlung sollte per PayPal bezahlt werden und ist als zurückerstattet "
+"Diese Bezahlung sollte manuell bezahlt werden, ist aber nicht als bezahlt "
 "markiert."
 
 #: pretix/plugins/paypal/__init__.py:10 pretix/plugins/paypal/__init__.py:13
