--- a/src/pretix/locale/es/LC_MESSAGES/django.po
+++ b/src/pretix/locale/es/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: 2018-06-20 04:00+0000\n"
-"Last-Translator: Dimas 3r1ck Rivas <rivas7676@gmail.com>\n"
+"PO-Revision-Date: 2018-07-08 14:06+0000\n"
+"Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/pretix/"
 "es/>\n"
 "Language: es\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 2.19.1\n"
+"X-Generator: Weblate 3.0.1\n"
 
 #: pretix/api/models.py:18
 msgid "Application name"
@@ -99,7 +99,9 @@ msgstr ""
 msgid ""
 "The application \"{application_name}\" has been authorized to access your "
 "account."
-msgstr "la aplicacion  ha sido autorizada para acceder desde tu cuenta"
+msgstr ""
+"la aplicacion \"{application_name}\" ha sido autorizada para acceder desde "
+"tu cuenta"
 
 #: pretix/base/exporters/answers.py:18
 msgid "Answers to file upload questions"
