--- a/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: French\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: 2018-05-18 09:31+0000\n"
-"Last-Translator: Eric Daras <eric@daras.family>\n"
+"PO-Revision-Date: 2018-07-08 17:01+0000\n"
+"Last-Translator: Claude <superoxyde@laposte.net>\n"
 "Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix-js/"
 "fr/>\n"
 "Language: fr\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 2.19.1\n"
+"X-Generator: Weblate 3.0.1\n"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:56
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
@@ -126,11 +126,11 @@ msgstr "Appuyez sur Ctrl-C pour copier !"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:22
 msgid "Lead Scan QR"
-msgstr ""
+msgstr "Balayage du QR code"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:24
 msgid "Check-in QR"
-msgstr ""
+msgstr "Enregistrement QR code"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:216
 msgid "The PDF background file could not be loaded for the following reason:"
@@ -194,7 +194,7 @@ msgstr "Aucun"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:527
 msgid "Use a different name internally"
-msgstr ""
+msgstr "Utiliser un nom différent en interne"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
@@ -207,8 +207,8 @@ msgstr "Compter"
 #: pretix/static/pretixcontrol/js/ui/subevent.js:108
 msgid "(one more date)"
 msgid_plural "({num} more dates)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "(une date en plus)"
+msgstr[1] "({num} plus de dates)"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
 msgid "The items in your cart are no longer reserved for you."
