--- a/src/pretix/locale/tr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/tr/LC_MESSAGES/djangojs.po
@@ -8,42 +8,44 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2018-07-17 21:00+0000\n"
+"Last-Translator: Yunus Fırat Pişkin <firat.piskin@idvlabs.com>\n"
+"Language-Team: Turkish <https://translate.pretix.eu/projects/pretix/"
+"pretix-js/tr/>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.0.1\n"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:56
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:68
 msgid "Marked as paid"
-msgstr ""
+msgstr "Ödenmiş olarak işaretlendi"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:76
 msgid "Comment:"
-msgstr ""
+msgstr "Yorum:"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:33
 msgid "Placed orders"
-msgstr ""
+msgstr "Yerleştirilen siparişler"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:33
 msgid "Paid orders"
-msgstr ""
+msgstr "Ödenmiş siparişler"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:21
 msgid "Total revenue"
-msgstr ""
+msgstr "Toplam gelir"
 
 #: pretix/plugins/stripe/static/pretixplugins/stripe/pretix-stripe.js:10
 msgid "Contacting Stripe …"
-msgstr ""
+msgstr "İletişim Hattı …"
 
 #: pretix/static/pretixbase/js/asyncdownload.js:28
 #: pretix/static/pretixbase/js/asynctask.js:42
@@ -53,18 +55,21 @@ msgid ""
 "this takes longer than two minutes, please contact us or go back in your "
 "browser and try again."
 msgstr ""
+"İsteğiniz sunucuda sıraya alındı ve şimdi işlenecek. Bu işlem iki dakikadan "
+"uzun sürerse lütfen bizimle iletişime geçin veya tarayıcınıza geri dönün ve "
+"tekrar deneyin."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:41
 #: pretix/static/pretixbase/js/asynctask.js:62
 #: pretix/static/pretixbase/js/asynctask.js:116
 #: pretix/static/pretixcontrol/js/ui/mail.js:23
 msgid "An error of type {code} occurred."
-msgstr ""
+msgstr "{Code} türünde bir hata oluştu."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:54
 #: pretix/static/pretixbase/js/asynctask.js:137
 msgid "We are processing your request …"
-msgstr ""
+msgstr "İsteğinizi işliyoruz …"
 
 #: pretix/static/pretixbase/js/asyncdownload.js:55
 #: pretix/static/pretixbase/js/asynctask.js:138
@@ -73,6 +78,9 @@ msgid ""
 "than one minute, please check your internet connection and then reload this "
 "page and try again."
 msgstr ""
+"Şu anda isteğinizi sunucuya gönderiyoruz. Bu işlem bir dakikadan uzun "
+"sürerse, lütfen İnternet bağlantınızı kontrol edin ve ardından bu sayfayı "
+"tekrar yükleyin ve tekrar deneyin."
 
 #: pretix/static/pretixbase/js/asynctask.js:38
 #: pretix/static/pretixbase/js/asynctask.js:90
@@ -80,112 +88,117 @@ msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
 msgstr ""
+"İsteğiniz sunucuda sıraya alındı ve şimdi işlenecek. Etkinliğinizin boyutuna "
+"bağlı olarak, bu birkaç dakika sürebilir."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
 "We currently cannot reach the server, but we keep trying. Last error code: "
 "{code}"
 msgstr ""
+"Şu anda sunucuya ulaşamıyoruz, ancak denemeye devam ediyoruz. Son hata kodu: "
+"{code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:107
 #: pretix/static/pretixcontrol/js/ui/mail.js:20
 msgid "The request took to long. Please try again."
-msgstr ""
+msgstr "İstek uzun sürdü. Lütfen tekrar deneyin."
 
 #: pretix/static/pretixbase/js/asynctask.js:119
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
 msgid ""
 "We currently cannot reach the server. Please try again. Error code: {code}"
-msgstr ""
+msgstr "Şu anda sunucuya ulaşamıyoruz. Lütfen tekrar deneyin. Hata kodu: {code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:174
 #: pretix/static/pretixcontrol/js/ui/main.js:28
 msgid "Close message"
-msgstr ""
+msgstr "Mesajı kapat"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:23
 msgid "Copied!"
-msgstr ""
+msgstr "Kopyalanan!"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:29
 msgid "Press Ctrl-C to copy!"
-msgstr ""
+msgstr "Kopyalamak için Ctrl-C tuşlarına basın!"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:22
 msgid "Lead Scan QR"
-msgstr ""
+msgstr "Öncü Tarayıcı QR"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:24
 msgid "Check-in QR"
-msgstr ""
+msgstr "Giriş QR"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:216
 msgid "The PDF background file could not be loaded for the following reason:"
-msgstr ""
+msgstr "PDF arka plan dosyası aşağıdaki nedenden dolayı yüklenemedi:"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:365
 msgid "Group of objects"
-msgstr ""
+msgstr "Nesne grubu"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:371
 msgid "Text object"
-msgstr ""
+msgstr "Metin nesnesi"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:373
 msgid "Barcode area"
-msgstr ""
+msgstr "Barkod alanı"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:375
 msgid "Object"
-msgstr ""
+msgstr "Nesne"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:379
 msgid "Ticket design"
-msgstr ""
+msgstr "Bilet tasarımı"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:616
 msgid "Saving failed."
-msgstr ""
+msgstr "Kaydetme başarısız oldu."
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:663
 msgid "Do you really want to leave the editor without saving your changes?"
 msgstr ""
+"Değişiklikleri kaydetmeden editörden gerçekten ayrılmak istiyor musunuz?"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:677
 msgid "Error while uploading your PDF file, please try again."
-msgstr ""
+msgstr "PDF dosyanızı yüklerken hata oluştu, lütfen tekrar deneyin."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:18
 msgid "An error has occurred."
-msgstr ""
+msgstr "Bir hata oluştu."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:52
 msgid "Generating messages …"
-msgstr ""
+msgstr "Mesaj oluşturuluyor…"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
 msgid "Unknown error."
-msgstr ""
+msgstr "Bilinmeyen hata."
 
 #: pretix/static/pretixcontrol/js/ui/main.js:246
 msgid "All"
-msgstr ""
+msgstr "Hepsi"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:247
 msgid "None"
-msgstr ""
+msgstr "Hiçbiri"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:527
 msgid "Use a different name internally"
-msgstr ""
+msgstr "Dahili olarak farklı bir ad kullan"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
-msgstr ""
+msgstr "Diğerleri"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:70
 msgid "Count"
-msgstr ""
+msgstr "Saymak"
 
 #: pretix/static/pretixcontrol/js/ui/subevent.js:108
 msgid "(one more date)"
